Card copy
Opret en "kopi" af kort objekterne, så de ikke hænger sammen i decks